# advent-of-code

./: .flake8  README.md  logging.conf  pyproject.toml
2015/: README.md  day01.py  day01.txt  day02.py  day02.txt  day03.py  day03.txt  day04.py  day04.txt  day05.py  day05.txt  day06.py  day06.txt  day07.py  day07.txt  day08.py  day08.txt  day09.py  day09.txt  day10.py  day10.txt  day11.py  day11.txt  day12.py  day12.txt  day13.py  day13.txt  day14.py  day14.txt  day15.py  day15.txt
2017/: README.md  day01.py  day01.txt  day02.py  day02.txt  day03.py  day03.txt  day04.py  day04.txt  day05.py  day05.txt  day06.py  day06.txt  day07.py  day07.txt  day08.py  day08.txt  day09.py  day09.txt  day10.py  day10.txt  day11.py  day11.txt  day12.py  day12.txt  day13.py  day13.txt  day14.py  day14.txt  day15.py  day15.txt  day16.py  day16.txt  day17.py  day17.txt
2018/: README.md  day01.py  day01.txt  day02.py  day02.txt  day03.py  day03.txt  day04.py  day04.txt  day05.py  day05.txt  day06.py  day06.txt  day07.py  day07.txt  day08.py  day08.txt  day09.py  day09.txt  day10.py  day10.txt  day11.py  day11.txt  day12.py  day12.txt  day13.py  day13.txt  day14.py  day14.txt  day15.py  day15.txt  day16.py  day16.txt  day17.py  day17.txt  day18.py  day18.txt  day19.py  day19.txt  day20.py  (+10 more)
2020/: README.md  day01.py  day01.txt  day02.py  day02.txt  day03.py  day03.txt  day04.py  day04.txt  day05.py  day05.txt  day06.py  day06.txt  day07.py  day07.txt  day08.py  day08.txt  day09.py  day09.txt  day10.py  day10.txt  day11.py  day11.txt  day12.py  day12.txt  day13.py  day13.txt  day14.py  (+23 more)
(+94 files in other folders)
